@@ -28,7 +28,7 @@
 
 extern int check_for_jp2     (FILE *fp);
 extern int jp2_include_image (pdf_ximage *ximage, FILE *fp);
-extern int jp2_get_bbox (FILE *fp, long *width, long *height,
+extern int jp2_get_bbox (FILE *fp, int *width, int *height,
 			double *xdensity, double *ydensity);
 
 #endif /* _JP2IMAGE_H_ */
